# led_strip

./: .clangd  .cproject  .gitignore  sdkconfig.defaults
main/: CMakeLists.txt  Kconfig.projbuild  commit.sh  led_control.c  led_control.h  led_strip_custom.c  ota_manager.c  ota_manager.h  wifi_manager.c  wifi_manager.h
